<resources>
    <string name="app_name">Instamojo</string>
    <string name="card_number">Card Number</string>
    <string name="mm_yy">MM/yy</string>
    <string name="card_holders_name">Name</string>
    <string name="cvv">CVV</string>
    <string name="proceed">Proceed with Card</string>
    <string name="example_name">Test Name</string>
    <string name="example_email">android-sdk-sample-app@instamojo.com</string>
    <string name="example_phone">9876543210</string>
    <string name="example_amount">10</string>
    <string name="test_description">Test description</string>
    <string name="pay">Pay</string>
    <string name="loader_message">Please wait…</string>
    <string name="full_name">Full Name</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login_btn">Login here</string>
    <string name="login">Login</string>
    <string name="register_here_btn">Register Here</string>
    <string name="email_username_or_userid">Email, username or userId</string>
    <string name="success">Success</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
</resources>
